<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">

    <TextView
        android:id="@+id/register_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/register_tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/register_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_register"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/register_et_name"
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/register_et_contact"
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/register_contact"
        android:inputType="number"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/register_et_email"
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/register_et_password"
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/register_pwd"
        android:inputType="textPassword"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_register"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/register_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_login"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

</androidx.appcompat.widget.LinearLayoutCompat>