<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">

    <TextView
        android:id="@+id/reset_password_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/reset_password_tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/reset_password_tv_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_reset_password"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/reset_password_et_email"
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/reset_password_email"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/reset_password_btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_reset_password"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/reset_password_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_back"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

</androidx.appcompat.widget.LinearLayoutCompat>