<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".imei.ImeiMainActivity">

    <TextView
        android:id="@+id/imei_main_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/imei_main_tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/imei_main_tv_imei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imei_main_tv_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/imei_main_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/imei_main_back"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imei_main_tv_imei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/imei_main_tv_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/imei_main_tv_imei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/imei_main_imei"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imei_main_tv_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imei_main_btn_lost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imei_main_tv_imei">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/imei_main_tv_nameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name:"
                android:layout_marginStart="15dp" />

            <EditText
                android:id="@+id/imei_main_et_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/imei_main_tv_contactTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone No.:"
                android:layout_marginStart="15dp" />

            <EditText
                android:id="@+id/imei_main_et_contact"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/imei_main_tv_emailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email ID:"
                android:layout_marginStart="15dp" />

            <EditText
                android:id="@+id/imei_main_et_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <Button
        android:id="@+id/imei_main_btn_lost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imei_main_lost"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imei_main_tv_imei"
        app:layout_constraintVertical_bias="0.723" />


</androidx.constraintlayout.widget.ConstraintLayout>